# bevy_temporally_coherent_item_system

./: .editorconfig  .gitignore  .pre-commit-config.yaml  Cargo.toml  LICENSE-MIT  README.md  justfile  pyproject.toml  rust-toolchain.toml  typos.toml
.cargo/: config.toml
assets/defs/building/: container.building.ron  wall.building.ron
assets/defs/item/: gun.item.ron
src/: camera.rs  game.rs  item.rs  lib.rs  main.rs
src/building/: loader.rs
src/item/: components.rs  gun.rs  inspect.rs  inventory.rs  loader.rs  registry.rs  scenes.rs  state.rs  stats.rs  view.rs  views.rs
src/item/components/: firearm.rs  gun.rs  rusty.rs
src/item/views/: gun.rs  inventory_ui.rs  rusty.rs  tint.rs
tests/: item_system.rs
