[package]
name = "bevy_temporally_coherent_item_system"
version = "0.1.0"
edition = "2024"
authors = ["Andre Roelofs"]
license = "MIT OR Apache-2.0"

[workspace.package]
version = "0.1.0"
edition = "2024"

[workspace.dependencies]
avian3d = "0.7"
bevy = "0.19"
bevy_mesh = "0.19"
bevy_asset_loader = "0.27"
bevy_common_assets = "0.17"
bevy_dev_tools = "0.19"
bevy_ecs_tiled = { git = "https://github.com/AndreRoelofs/bevy_ecs_tiled.git", branch = "bevy-0.19" }
bevy_ecs_tilemap = { git = "https://github.com/AndreRoelofs/bevy_ecs_tilemap.git", branch = "bevy-0.19" }
bevy_northstar = { git = "https://github.com/AndreRoelofs/bevy_northstar.git", branch = "bevy-0.19" }
bevy_panorbit_camera = { git = "https://github.com/AndreRoelofs/bevy_panorbit_camera.git", branch = "bevy-0.19" }
bevy_ui = "0.19"
bon = "3.8.2"
ldtk_rust = "0.6"
log = { version = "*", features = ["max_level_debug", "release_max_level_warn"] }
ndarray = "0.17.2"
ndshape = "0.3.0"
noise = "0.9.0"
rand = "0.10"
ron = "0.12"
serde = "1.0"
serde_json = "1.0"
smallvec = "1"
thiserror = "2.0"
tiled = "0.15.0"
tracing = "0.1"
tracing-subscriber = "0.3"
uuid = "1"

[dependencies]
bevy = { workspace = true }
bevy_dev_tools = { workspace = true }
serde = { workspace = true }
bevy_common_assets = { workspace = true, features = ["ron"] }
bevy_asset_loader = { workspace = true }
bevy_northstar = { workspace = true }
noise = { workspace = true }
rand = { workspace = true }
ron = { workspace = true }


[features]
default = ["dev"]
# `bevy/debug` makes `DebugName` store real component/type names instead of the
# "<Enable the debug feature to see the name>" placeholder — needed for the
# on-screen component list. Only enabled in dev builds.
dev = ["bevy/dynamic_linking", "bevy/debug"]
profile = []

# Enable a small amount of optimization in the dev profile.
[profile.dev]
opt-level = 1
overflow-checks = false
incremental = true
codegen-units = 256

[profile.dev.package."*"]
opt-level = 3

[profile.release]
lto = "thin"
codegen-units = 1

[profile.dist]
inherits = "release"
lto = "fat"
codegen-units = 1
panic = "abort"
strip = true

[profile.wasm-release]
inherits = "release"
opt-level = "s"
strip = "debuginfo"
